@@ -11,7 +11,7 @@
  *     * Neither the name of the <organization> nor the
  *       names of its contributors may be used to endorse or promote products
  *       derived from this software without specific prior written permission.
- * 
+ *
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -27,23 +27,33 @@ package org.jastadd.tinytemplate;
 
 /**
  * A template expansion warning can occur:
- * 
+ *
  * <p><ul>
  * <li>when attempting to expand an unknown template
  * <li>when attempting to expand an unbound variable
  * <li>when any kind of error occurs during attribute expansion when
  * attempting to call the attribute
  * </ul>
- * 
+ *
  * @author Jesper Öqvist <jesper.oqvist@cs.lth.se>
  */
 @SuppressWarnings("serial")
 public class TemplateExpansionWarning extends RuntimeException {
+	private final String templateProblem;
+
 	/**
 	 * Constructor
 	 * @param message The warning message
 	 */
 	public TemplateExpansionWarning(String message) {
 		super("Template expansion warning: " + message);
+		this.templateProblem = message;
+	}
+
+	/**
+	 * @return the template expansion problem description message
+	 */
+	public String getProblem() {
+		return templateProblem;
 	}
 }
